--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
-    <link rel="stylesheet" href="quote box.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <ul>
-                <li><a href=""> Quote Box</a></li>
-                <li><a href=""> Hero Converter</a></li>
-                <li><a href=""> Sorter</a></li>
-                <li><a href=""> Magic</a></li>
-            </ul>
-            </div>
+        <h1 class="first-title">Random Quotes</h1>
     </header>
     <main>
         <div class="Random-quotes-container">
@@ -28,12 +21,19 @@
             <button id="bt-3"></button>
             <button id="bt-4"></button>
         </div>
+
+
+
+        <div>
+            <h1 class="second-title">Hero Converter</h1>
+        </div>
+        
     </main>
 
 
 
 
 
-   <script src="quote box.js"></script>     
+   <script src="web.js"></script>     
 </body>
 </html>
