another commit for 2nd

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <!-- task 2 ended  -->
         <!-- task 3 starts  -->
 
+        <section>
+
+            
+        </section>
+
 
 
    <script src="web.js"></script>
