--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <p class="component">Convert:</p>
                     <input id="givenumber" class="component" type="number">
                     <select id="styleofconversion">
-                        <option value="1">lbs to kg</option>
-                        <option value="2">kg to lbs</option>
+                        <option value="1">lb to kg</option>
+                        <option value="2">kg to lb</option>
                     </select>
                     <button id="Go" class="component">Go</button>
                     <p id="unit" class="component"></p>
@@ -92,7 +92,9 @@
         </section>
         <!-- task 4 starts  -->
 
-        <section></section>
+        <section>
+
+        </section>
 
 
 
