--- a/index.html
+++ b/index.html
@@ -91,12 +91,25 @@
                 </div>
         </section>
         <!-- task 4 starts  -->
-
-        <section>
-
+        
+        <section class="fourth-task">
+            <h1 >Magic!</h1>
+               <textarea id="text-field-input" cols="70" rows="10"></textarea>
+               <br>
+               <div class="button">
+                    <button id="but-1"  onclick="clearit()">Clear it</button>
+                    <button id="but-2"  onclick="capitalize()">Capitalize</button>
+                    <button id="but-3"  onclick="sort()">Sort</button>
+                    <button id="but-4"  onclick="reverse()">Reverse</button>
+                    <button id="but-5"  onclick="stripBlank()">Strip Blank</button>
+                    <button id="but-6"  onclick="addNumber()">Add Numbers</button>
+                    <button id="but-7"  onclick="shuffle()">Shuffle</button>
+               </div>
+            
         </section>
+        <!-- task4 ended -->
 
-
+     <!-- js link  -->
 
    <script src="web.js"></script>
    <script src="web2.js"></script>
