--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br>
                 <br>
                 <div class="user-inputs">
-                    <p class="takeninput"> <b>Reverse order:</b>  </p>
+                    <p class="takeninput"> <b>Reverse:</b>  </p>
                     <p id="reverse" class="takeninput"></p>
                 </div>
                 </div>
